# symbolon

./: .gitignore  AGENTS.md  Cargo.toml  LICENSE-MIT  README.md  rust-toolchain.toml
.claude/: settings.local.json
.github/workflows/: release.yml
docs/: ARCHITECTURE.md  INSTALL.md  OPERATIONS.md  PROTOCOLS.md  PROVIDER_CONTRACT.md  REFERENCES.md
docs/providers/: github.md
fuzz/: Cargo.toml
fuzz/fuzz_targets/: git_credential_parse.rs  identity_prelude_parse.rs  identity_tlv_parse.rs  proxy_protocol_parse.rs
scripts/: release-build.sh
src/: admin.rs  atomic_fs.rs  broker_key.rs  config.rs  connection_tracker.rs  cpu_worker.rs  daemon.rs  errors.rs  events.rs  git_credential.rs  identity.rs  ids.rs  lib.rs  loader.rs  logging.rs  main.rs  mlock.rs  note.rs  proxy_protocol.rs  psk.rs  psk_store.rs  rate_limit.rs  ready.rs  sandbox.rs  signals.rs  singleflight_cache.rs  stunnel.rs  transport.rs  ttl_cache.rs
src/providers/: agent.rs  agent_backend.rs  agent_protocol.rs  github.rs  jwt_backend.rs  jwt_rs256.rs  mod.rs  tpm_backend.rs
src/providers/tpm_backend/: wire.rs
tests/: admin.rs  client_binary.rs  daemon.rs  github_provider.rs  integration.rs  sign_agent.rs  tpm_backend.rs
tests/common/: mod.rs
tests/fixtures/: test_app_key.pem
