[package]
name = "gcb"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"

[dependencies]
argh = "0.1.19"
compio = { version = "0.19", features = ["fs", "io-uring", "macros", "net", "runtime", "signal", "time"] }
cyper = "0.9"
futures-util = "0.3.32"
jsonwebtoken = { version = "10.4.0", features = ["rust_crypto"] }
landlock = "0.4.5"
libc = "0.2.186"
rustix = { version = "1.1.4", features = ["process"] }
seccompiler = "0.5.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
thiserror = "2.0.18"
time = { version = "0.3.47", default-features = false, features = [
  "parsing",
  "formatting",
] }
toml = "1.1.2"
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.23", features = ["json"] }
ulid = "1.2.1"

[profile.release]
opt-level = "z"
lto = "fat"
codegen-units = 1
panic = "abort"
strip = "symbols"

[dev-dependencies]
wiremock = "0.6.5"
