[package]
name = "gcb"
version = "0.1.0"
edition = "2024"
license = "Apache-2.0"

[dependencies]
argh = "0.1.19"
compio = { version = "0.19", features = [
  "fs",
  "io-uring",
  "macros",
  "net",
  "runtime",
  "signal",
  "time",
] }
cyper = "0.9"
futures-channel = "0.3"
futures-util = "0.3.32"
humantime-serde = "1.1.1"
jsonwebtoken = { version = "10.4.0", features = ["rust_crypto"] }
landlock = "0.4.5"
libc = "0.2.186"
percent-encoding = "2.3.2"
rustix = { version = "1.1.4", features = ["net", "process"] }
sd-notify = "0.5.0"
seccompiler = "0.5.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
signal-hook-registry = "1.4.8"
synchrony = { version = "0.1.8", features = ["async_flag", "event"] }
thin-cell = "0.2.1"
thiserror = "2.0.18"
time = { version = "0.3.47", default-features = false, features = [
  "parsing",
  "formatting",
] }
toml = "1.1.2"
tracing = "0.1.44"
tracing-subscriber = "0.3.23"
ulid = "1.2.1"
url = { version = "2.5.8", default-features = false }

[profile.release]
opt-level = "z"
lto = "fat"
codegen-units = 1
panic = "abort"
strip = "symbols"

[dev-dependencies]
wiremock = "0.6.5"
