[package]
name = "symbolon"
version = "0.1.0"
edition = "2024"
license = "MIT OR Apache-2.0"
description = "Daemon that mints short-lived, single-repository git credentials on demand."

[dependencies]
argh = { version = "0.1.19", default-features = false, features = ["help"] }
async-trait = "0.1.89"
base64 = "0.22"
compio = { version = "0.19", features = [
  "fs",
  "io-uring",
  "macros",
  "net",
  "ring",
  "runtime",
  "time",
] }
cyper = { version = "0.9", default-features = false, features = [
  "rustls",
  "http2",
] }
derive_more = { version = "2.1.1", default-features = false, features = [
  "as_ref",
  "display",
  "from",
  "into",
] }
futures-channel = "0.3"
futures-util = "0.3.32"
getrandom = "0.4.3"
hex = "0.4.3"
humantime-serde = "1.1.1"
landlock = "0.4.5"
libc = "0.2.186"
listenfd = "1.0.2"
rsa = { version = "0.9", default-features = false, features = [
  "pem",
  "std",
  "u64_digit",
] }
sd-notify = "0.5.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
sha2 = { version = "0.10", features = ["oid"] }
signal-hook-registry = "1.4.8"
snow = { version = "0.10", default-features = false, features = [
  "default-resolver",
  "use-chacha20poly1305",
  "use-blake2",
  "use-curve25519",
  "use-getrandom",
  "std",
] }
strum = { version = "0.28.0", features = ["derive"] }
synchrony = { version = "0.1.8", features = ["async_flag", "event", "mutex"] }
thin-cell = "0.2.1"
thiserror = "2.0.18"
time = { version = "0.3.47", default-features = false, features = [
  "parsing",
  "formatting",
  "serde",
  "serde-well-known",
  "std",
] }
toml = "1.1.2"
tracing = { version = "0.1.44", default-features = false, features = [
  "std",
  "release_max_level_info",
] }
tracing-subscriber = { version = "0.3.23", default-features = false, features = [
  "fmt",
  "json",
  "registry",
  "std",
] }
ulid = "1.2.1"
url = { version = "2.5.8", default-features = false }

[profile.release]
opt-level = "z"
lto = "fat"
codegen-units = 1
panic = "abort"
strip = "symbols"
# RFC 3127 `trim-paths` would be the cleaner mechanism but is
# unstable as of Cargo 1.96. Path remapping is configured via
# `.cargo/config.toml` (RUSTFLAGS --remap-path-prefix) instead;
# Cargo excludes that flag from the metadata hash so it doesn't
# cause rebuild churn. Move to `trim-paths = "all"` once it
# stabilises.

[dev-dependencies]
wiremock = "0.6.5"

[[bin]]
name = "symbolon"
path = "src/main.rs"

[[bin]]
name = "git-credential-symbolon"
path = "src/bin/git_credential_symbolon.rs"
