[package]
name = "symbolon-fuzz"
version = "0.0.0"
publish = false
edition = "2024"

[package.metadata]
cargo-fuzz = true

[dependencies]
libfuzzer-sys = "0.4"

[dependencies.symbolon]
path = ".."

# Prevent this crate from being workspaced into the parent project.
[workspace]

[[bin]]
name = "git_credential_parse"
path = "fuzz_targets/git_credential_parse.rs"
test = false
doc = false
bench = false

[[bin]]
name = "identity_prelude_parse"
path = "fuzz_targets/identity_prelude_parse.rs"
test = false
doc = false
bench = false
